[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/MenuScreen.jpg" type="Texture" id=2]

[node name="CenterContainer" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
first_scene_temp = "res://scenes/MainScene.tscn"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
alignment = 1

[node name="MenuScreen" type="Sprite" parent="VBoxContainer2"]
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 595.0
margin_top = 310.0
margin_right = 684.0
margin_bottom = 410.0
custom_constants/separation = 20

[node name="GameTitle" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "ZOOKOBAN"
align = 1

[node name="Button_Start" type="Button" parent="VBoxContainer"]
margin_right = 89.0
margin_bottom = 20.0
text = "Start"

[node name="Button_Level_select" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 89.0
margin_bottom = 60.0
text = "Level Select"

[node name="Button_Exit" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 89.0
margin_bottom = 100.0
text = "Exit"
